# Calculator_with_Crewai

./: README.md  pyproject.toml
src/calculator/: __init__.py  calculator.py
