[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator package"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.61.6",
]

[project.scripts]
calculator = "calculator:main"
test = "calculator.calculator:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
